--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,20 @@ body {
 }
 
 
+
 .clockface {
-	position: absolute;
   	left: 0;
   	right: 0;
   	margin-left: auto;
   	margin-right: auto;
+  	margin-top: 15%;
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
 	width: 300px;
 	height: 300px;
 	font-family: 'Rubik Mono One', sans-serif;
 	color: white;
 	text-shadow: 1px grey;
-	font-size: 80px;
+	font-size: 100px;
 }
